:ok_hand: style

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,13 @@
 :root {
-  --primary: #00B37E;
+  --red: #ff1100;
+  --yellow: #e0f804;
+  --green: #35f804;
+  --blue: #2238fa;
   --background: #121214;
   --text: #FFF;
   --caption: #8D8D99;
   --gray: #E1E1E6;
-  --background-light: rgba(255, 255, 255, 0.05);
+  --background-light: #0561ca65;
 }
 
 * {
