--- a/src/pages/Signin/styles.scss
+++ b/src/pages/Signin/styles.scss
@@ -1,4 +1,3 @@
-
 .container {
   width: 100%;
   height: 100vh;
@@ -12,35 +11,37 @@
 
   span {
     color: var(--caption);
-
   }
 }
 
+
 .button {
-  height: 56px;
-  width: 650px;
+  height: 3.5rem;
+  width: 15.25rem;
 
-  color: var(--text);
-  background: none;
-  border-image: linear-gradient(to right, var(--primary), var(--gray)) 1;
-
-  margin-top: 32px;
-  font-size: 18px;
+  margin-top: 1rem;
+  font-size: 1.125rem;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 
-  transition: background-color 0.2s;
+  background: linear-gradient(to left, var(--yellow), var(--green));
+  border-radius: 8px;
+  border: none;
 
-  svg {
-    font-size: 24px;
-    margin-right: 7px;
-  }
+  transition: 0.5s;
 
   &:hover {
-    background: var(--background-light);
+    background: linear-gradient(to right, var(--red), var(--blue));
+    color: var(--text);
   }
+
+  svg {
+    font-size: 1.5rem;
+    margin-right: 0.4375rem;
+  }
+
 }
 
 .user {
@@ -48,11 +49,11 @@
   align-items: center;
   flex-direction: column;
 
-  margin-bottom: 64px;
+  margin-bottom: 4rem;
 
   img {
-    width: 140px;
-    height: 140px;
+    width: 8.75rem;
+    height: 8.75rem;
     border-radius: 70px;
   }
 }
